jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

DllImport int ECF_GetEmLinha(const INTPTR ecfHandle, const int timeOut);

DllImport int ECF_GetGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetNumCOOInicial(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetNumUltItem(const INTPTR ecfHandle);

DllImport int ECF_GetTotalAcrescimos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalAcrescimosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalCancelamentosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontos(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalDescontosISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencao(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalIsencaoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoFiscal(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributado(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalNaoTributadoISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributaria(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalSubstituicaoTributariaISSQN(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetTotalTroco(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetVendaBruta(const INTPTR ecfHandle, double* value);

DllImport int ECF_SetAAC(const INTPTR ecfHandle, const INTPTR aacHandle);

DllImport int ECF_SetEAD(const INTPTR ecfHandle, const INTPTR eadHandle);

DllImport int ECF_SetRFD(const INTPTR ecfHandle, const INTPTR rfdHandle);